--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
 
 }
 .main-container{
-    width: 20rem;
+    min-width: 20rem;
     border-radius: 10px;
     position: relative;
     background: transparent;
