--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body{
 .main-container{
     min-width: 20rem;
     border-radius: 10px;
+    border: 1px solid rgb(62, 150, 250);
     position: relative;
     background: transparent;
     backdrop-filter: blur(10px);
